--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5434/price_service
 spring.datasource.username=admin
-spring.datasource.password=uGQWe_He4YR28iiGK7ltOXLiwznomO
+spring.datasource.password=admin
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
