--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5434/price_service
-spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.username=price_db_user
+spring.datasource.password=9VmysmHDF3
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
