--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
     restart: unless-stopped
     environment:
       POSTGRES_DB: price_service
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
+      POSTGRES_USER: price_db_user
+      POSTGRES_PASSWORD: 9VmysmHDF3
     ports:
       - "5434:5432"  # Изменено с 5432 на 5433
     volumes:
@@ -33,8 +33,8 @@ services:
     environment:
       # Подключение к БД - ВНУТРИ контейнера используем порт 5432
       SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/price_service
-      SPRING_DATASOURCE_USERNAME: admin
-      SPRING_DATASOURCE_PASSWORD: admin
+      SPRING_DATASOURCE_USERNAME: price_db_user
+      SPRING_DATASOURCE_PASSWORD: 9VmysmHDF3
 
       # JPA настройки
       SPRING_JPA_HIBERNATE_DDL_AUTO: update
