--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U admin -d price_service"]
+      test: ["CMD-SHELL", "pg_isready -U price_db_user -d price_service"]
       interval: 10s
       timeout: 5s
       retries: 5
